bgd/bgd-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bgd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec: {}
